--- a/e-learning.html
+++ b/e-learning.html
@@ -45,7 +45,7 @@
             <!-- Dropdown list -->
             <ul class="dropdown-menu">
               <li><a class="dropdown-item @@livecourse" href="livecourse.html">Live-Course</a></li>
-              <li><a class="dropdown-item @@e-learning" href="e-learning.html">E-Learning</a></li>
+              <li><a class="dropdown-item @@e-learning" href="materi1.html">E-Learning</a></li>
               <li><a class="dropdown-item @@event-fastrack" href="event-fastrack.html">Event FASTRACK.Edu</a></li>
               <li><a class="dropdown-item @@event-national" href="event-national.html">Event National</a></li>
               <li><a class="dropdown-item @@vidio-lesson" href="vidio-lesson.html">Vidio Lesson</a></li>
@@ -120,7 +120,7 @@
           <!-- User License -->
           <div id="userLicense" class="policy-item">
             <div class="title">
-              <h3>Dasar-Dasar Menulis Esai</h3>
+              <h3>Memahami Esai Secara Luas</h3>
             </div>
             <div class="policy-details">
               <p>Esai adalah bentuk tulisan yang mengungkapkan pendapat atau argumen penulis tentang suatu topik
@@ -134,14 +134,14 @@
                 untuk mendukung argumen. Esai yang baik tidak hanya menyajikan informasi, tetapi juga mengajak pembaca
                 untuk berpikir dan mempertimbangkan sudut pandang penulis.</p>
               <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Wz28GkTeUSA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="images/e-learning/Sesi_1.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
           </div>
           <!-- Disclaimer -->
           <div id="disclaimer" class="policy-item">
             <div class="title">
-              <h3>Strategi Menulis Esai</h3>
+              <h3>Bagaimana Menemukan Ide</h3>
             </div>
             <div class="policy-details">
               <p>Langkah pertama dalam menulis esai adalah memilih topik yang menarik dan relevan. Setelah topik
@@ -160,7 +160,7 @@
           <!-- Limitations -->
           <div id="limitations" class="policy-item">
             <div class="title">
-              <h3>Teknik Penulisan Efektif</h3>
+              <h3>Ide Esai yang Smart dan Innovative</h3>
             </div>
             <div class="policy-details">
               <p>Pendahuluan yang kuat sangat penting untuk menarik minat pembaca. Mulailah dengan pernyataan yang
@@ -181,7 +181,7 @@
           <!-- Governing Law -->
           <div id="governingLaw" class="policy-item">
             <div class="title">
-              <h3>Tips dan Trik Menulis Esai</h3>
+              <h3>Data Itu Penting dan Teknik Mencari Literatur</h3>
             </div>
             <div class="policy-details">
               <p>Memahami audiens adalah kunci untuk menyesuaikan gaya penulisan dan tingkat kompleksitas bahasa. Atur
@@ -313,7 +313,7 @@
               <h6>Product</h6>
               <!-- links -->
               <ul>
-                <li><a href="e-learning.html">E-learning</a></li>
+                <li><a href="materi1.html">E-learning</a></li>
                 <li><a href="livecourse.html">Live-Course</a></li>
                 <li><a href="event-fastrack.html">Event FASTRACK.Edu</a></li>
               </ul>
