--- a/livecourse.html
+++ b/livecourse.html
@@ -45,7 +45,7 @@
             <!-- Dropdown list -->
             <ul class="dropdown-menu">
               <li><a class="dropdown-item @@livecourse" href="livecourse.html">Live-Course</a></li>
-              <li><a class="dropdown-item @@e-learning" href="e-learning.html">E-Learning</a></li>
+              <li><a class="dropdown-item @@e-learning" href="materi1.html">E-Learning</a></li>
               <li><a class="dropdown-item @@event-fastrack" href="event-fastrack.html">Event FASTRACK.Edu</a></li>
               <li><a class="dropdown-item @@event-national" href="event-national.html">Event National</a></li>
               <li><a class="dropdown-item @@vidio-lesson" href="vidio-lesson.html">Vidio Lesson</a></li>
@@ -194,7 +194,7 @@
                 <!-- Job Title -->
                 <h3>Live-Course PKM</h3>
                 <!-- Location -->
-                <p>Cahyo, Gold Medal Pimnas</p>
+                <p>Dinda Maulidia, Gold Medal Pimnas</p>
               </div>
               <!-- Action Button -->
               <div class="apply-button">
@@ -205,7 +205,7 @@
                   <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title">Android Developer</h5>
+                        <h5 class="modal-title">Course</h5>
                         <button type="button" class="close" data-dismiss="modal">
                           <span>&times;</span>
                         </button>
@@ -251,7 +251,7 @@
                         </div>
                         <form action="#">
                           <div class="row">
-                            <div class="col-lg-6 col-md-12">
+                            <!-- <div class="col-lg-6 col-md-12">
                               <input class="form-control main" type="text" placeholder="Nama" required>
                             </div>
                             <div class="col-lg-6 col-md-12">
@@ -266,10 +266,10 @@
                             <div class="col-md-12">
                               <textarea class="form-control main" name="about" id="" rows="10"
                                 placeholder="Output yang Diharapkan Setelah Bergabung Dengan Program"></textarea>
-                            </div>
+                            </div> -->
                             <!-- Submit Button -->
                             <div class="col-12 text-right">
-                              <button class="btn btn-main-md">Daftar</button>
+                              <a href="https://bit.ly/intensifprogramesai" class="btn-main-md">Daftar</a>
                             </div>
                           </div>
                         </form>
@@ -284,7 +284,7 @@
                 <!-- Job Title -->
                 <h3>Live-Course Essay</h3>
                 <!-- mentor -->
-                <p>Anik, 40+ Medal National</p>
+                <p>Anik Kurnia Ningsih, 40+ Medal National</p>
               </div>
               <!-- Action Button -->
               <div class="apply-button">
@@ -297,7 +297,7 @@
                 <!-- Job Title -->
                 <h3>Live-Course LKTI </h3>
                 <!-- mentor -->
-                <p>Hasan , 20+ Medal National</p>
+                <p>Arief Syaifullah, 20+ Medal National</p>
               </div>
               <!-- Action Button -->
               <div class="apply-button">
@@ -308,9 +308,9 @@
             <div class="job">
               <div class="content">
                 <!-- Job Title -->
-                <h3>Live-Course PPKO</h3>
+                <h3>Live-Course Bussines Plan</h3>
                 <!-- mentor -->
-                <p>zahra , Karya Lolos Pendanaan</p>
+                <p>Amru Hidayat, Karya Pendanaan P2MW</p>
               </div>
               <!-- Action Button -->
               <div class="apply-button">
@@ -376,7 +376,7 @@
               <h6>Product</h6>
               <!-- links -->
               <ul>
-                <li><a href="e-learning.html">E-learning</a></li>
+                <li><a href="materi1.html">E-learning</a></li>
                 <li><a href="livecourse.html">Live-Course</a></li>
                 <li><a href="event-fastrack.html">Event FASTRACK.Edu</a></li>
               </ul>
