--- a/mentoring.html
+++ b/mentoring.html
@@ -45,7 +45,7 @@
             <!-- Dropdown list -->
             <ul class="dropdown-menu">
               <li><a class="dropdown-item @@livecourse" href="livecourse.html">LivE-Learning</a></li>
-              <li><a class="dropdown-item @@e-learning" href="e-learning.html">E-Learning</a></li>
+              <li><a class="dropdown-item @@e-learning" href="materi1.html">E-Learning</a></li>
               <li><a class="dropdown-item @@event-fastrack" href="event-fastrack.html">Event FASTRACK.Edu</a></li>
               <li><a class="dropdown-item @@event-national" href="event-national.html">Event National</a></li>
               <li><a class="dropdown-item @@vidio-lesson" href="vidio-lesson.html">Vidio Lesson</a></li>
@@ -261,7 +261,7 @@
               <h6>Product</h6>
               <!-- links -->
               <ul>
-                <li><a href="e-learning.html">E-learning</a></li>
+                <li><a href="materi1.html">E-learning</a></li>
                 <li><a href="livecourse.html">LivE-Learning</a></li>
                 <li><a href="event-fastrack.html">Event FASTRACK.Edu</a></li>
               </ul>
