--- a/vidio-lesson.html
+++ b/vidio-lesson.html
@@ -45,7 +45,7 @@
 						<!-- Dropdown list -->
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item @@livecourse" href="livecourse.html">Live-Course</a></li>
-							<li><a class="dropdown-item @@e-learning" href="e-learning.html">E-Learning</a></li>
+							<li><a class="dropdown-item @@e-learning" href="materi1.html">E-Learning</a></li>
 							<li><a class="dropdown-item @@event-fastrack" href="event-fastrack.html">Event
 									FASTRACK.Edu</a></li>
 							<li><a class="dropdown-item @@event-national" href="event-national.html">Event National</a>
@@ -117,11 +117,12 @@
 							<!-- Social Contacts -->
 						</div>
 						<!-- Name -->
-						<h3>Langkah-langkah Menulis Karya Tulis Ilmiah dari Nol</h3>
+						<h3>Skema Validitas Internal dan Eksternal Karya Tulis</h3>
 						<!-- Description -->
-						<p>Video ini akan membahas setiap tahapan penting dalam penulisan karya tulis ilmiah, mulai dari
-							pemilihan topik hingga publikasi. Penonton akan mempelajari cara merancang penelitian,
-							mengumpulkan data, dan menyusun laporan yang solid dan sistematis.</p>
+						<p>Video ini akan membahas skema validitas internal dan eksternal dalam karya tulis ilmiah, yang
+							bertujuan memastikan kredibilitas dari temuan penelitian. Kedua aspek ini
+							penting untuk memastikan relevansi penelitian, sehingga hasil yang diperoleh
+							dapat dipercaya dan diterapkan dalam konteks yang lebih luas.</p>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
@@ -135,12 +136,14 @@
 							<!-- Social Contacts -->
 						</div>
 						<!-- Name -->
-						<h3>Panduan Lengkap Menyusun Karya Tulis Ilmiah</h3>
+						<h3>Pendalaman Statistical Package for the Social Sciences (SPSS)</h3>
 						<!-- Description -->
-						<p>Panduan ini memberikan informasi mendetail tentang struktur dan format karya tulis ilmiah.
-							Video ini mencakup penjelasan mengenai pendahuluan, tinjauan pustaka, metodologi, hasil,
-							pembahasan, hingga kesimpulan, sehingga penonton dapat memahami keseluruhan proses
-							penulisan.
+						<p>(SPSS) adalah perangkat lunak yang digunakan
+							untuk analisis statistik. SPSS memudahkan pengelolaan
+							data, analisis statistik, dan visualisasi hasil melalui fitur-fitur seperti uji statistik,
+							analisis regresi, dan analisis varians. SPSS membantu peneliti melakukan analisis kompleks
+							dan menyajikan hasil
+							secara jelas.
 						</p>
 					</div>
 				</div>
@@ -150,8 +153,8 @@
 						<!-- Team Member Image -->
 						<div class="image">
 							<a href="detail_vidio.html">
-							<img class="w-100" src="images/team/3.png" alt="team">
-						</a>
+								<img class="w-100" src="images/team/3.png" alt="team">
+							</a>
 							<!-- Social Contacts -->
 						</div>
 						<!-- Name -->
@@ -181,12 +184,12 @@
 						<!-- Team Member Image -->
 						<div class="image">
 							<a href="detail_vidio.html">
-							<img class="w-100" src="images/team/4.png" alt="team">
-						</a>
+								<img class="w-100" src="images/team/4.png" alt="team">
+							</a>
 							<!-- Social Contacts -->
 						</div>
 						<!-- Name -->
-						<h3>Membuat Karya Tulis Ilmiah: Langkah Demi Langkah</h3>
+						<h3>Proposal Riset dari Ide Karya Hingga Didanai</h3>
 						<!-- Position -->
 						<p>Video ini memberikan panduan langkah demi langkah yang terperinci dalam menulis karya tulis
 							ilmiah. Setiap langkah diuraikan dengan jelas, membantu penonton mengikuti proses penulisan
@@ -199,8 +202,8 @@
 						<!-- Team Member Image -->
 						<div class="image">
 							<a href="detail_vidio.html">
-							<img class="w-100" src="images/team/5.png" alt="team">
-							<!-- Social Contacts -->
+								<img class="w-100" src="images/team/5.png" alt="team">
+								<!-- Social Contacts -->
 						</div>
 						<!-- Name -->
 						<h3>Cara Efektif Menulis Proposal Penelitian</h3>
@@ -218,7 +221,7 @@
 						<div class="image">
 							<a href="detail_vidio.html"></a>
 							<img class="w-100" src="images/team/6.png" alt="team">
-						</a>
+							</a>
 							<!-- Social Contacts -->
 						</div>
 						<!-- Name -->
@@ -351,7 +354,7 @@
 							<h6>Product</h6>
 							<!-- links -->
 							<ul>
-								<li><a href="e-learning.html">E-learning</a></li>
+								<li><a href="materi1.html">E-learning</a></li>
 								<li><a href="livecourse.html">Live-Course</a></li>
 								<li><a href="event-fastrack.html">Event FASTRACK.Edu</a></li>
 							</ul>
