--- a/blog-single.html
+++ b/blog-single.html
@@ -45,7 +45,7 @@
 						<!-- Dropdown list -->
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item @@livecourse" href="livecourse.html">Live-Course</a></li>
-							<li><a class="dropdown-item @@e-learning" href="e-learning.html">E-Learning</a></li>
+							<li><a class="dropdown-item @@e-learning" href="materi1.html">E-Learning</a></li>
 							<li><a class="dropdown-item @@event-fastrack" href="event-fastrack.html">Event
 									FASTRACK.Edu</a></li>
 							<li><a class="dropdown-item @@event-national" href="event-national.html">Event National</a>
@@ -169,13 +169,13 @@
 									ilmu pengetahuan.</p>
 								<!-- Author Social links -->
 								<ul class="list-inline social-links">
-									<li class="list-inline-item"><a href="https://www.instagram.com/siftiyan__/"><i
+									<li class="list-inline-item"><a href="https://www.instagram.com/fastrack.edu_/"><i
 												class="ti-facebook"></i></a></li>
-									<li class="list-inline-item"><a href="https://www.instagram.com/siftiyan__/"><i
+									<li class="list-inline-item"><a href="https://www.instagram.com/fastrack.edu_/"><i
 												class="ti-twitter"></i></a></li>
-									<li class="list-inline-item"><a href="https://www.instagram.com/siftiyan__/"><i
+									<li class="list-inline-item"><a href="https://www.instagram.com/fastrack.edu_/"><i
 												class="ti-instagram"></i></a></li>
-									<li class="list-inline-item"><a href="https://www.instagram.com/siftiyan__/"><i
+									<li class="list-inline-item"><a href="https://www.instagram.com/fastrack.edu_/"><i
 												class="ti-linkedin"></i></a></li>
 								</ul>
 							</div>
@@ -358,7 +358,7 @@
 							<h6>Product</h6>
 							<!-- links -->
 							<ul>
-								<li><a href="e-learning.html">E-learning</a></li>
+								<li><a href="materi1.html">E-learning</a></li>
 								<li><a href="livecourse.html">Live-Course</a></li>
 								<li><a href="event-fastrack.html">Event FASTRACK.Edu</a></li>
 							</ul>
