--- a/event-fastrack.html
+++ b/event-fastrack.html
@@ -45,7 +45,7 @@
 						<!-- Dropdown list -->
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item @@livecourse" href="livecourse.html">Live-Course</a></li>
-							<li><a class="dropdown-item @@e-learning" href="e-learning.html">E-Learning</a></li>
+							<li><a class="dropdown-item @@e-learning" href="materi1.html">E-Learning</a></li>
 							<li><a class="dropdown-item @@event-fastrack" href="event-fastrack.html">Event
 									FASTRACK.Edu</a></li>
 							<li><a class="dropdown-item @@event-national" href="event-national.html">Event National</a>
@@ -194,42 +194,42 @@
 				<div class="roadmap-item">
 					<div class="roadmap-content">
 						<p class="text-muted">Pendaftaran Gelombang 1</p>
-						<h5 class="font-weight-600">22-30 Juni 2024</h5>
+						<h5 class="font-weight-600">1-7 Juli 2024</h5>
 					</div>
 				</div>
 
 				<div class="roadmap-item">
 					<div class="roadmap-content">
 						<p class="text-muted">Pendaftaran Gelombang 2</p>
-						<h5 class="font-weight-600">1-10 Juli 2024</h5>
+						<h5 class="font-weight-600">8-14 Juli 2024</h5>
 					</div>
 				</div>
 
 				<div class="roadmap-item">
 					<div class="roadmap-content">
 						<p class="text-muted">Pendaftaran Gelombang 3</p>
-						<h5 class="font-weight-600">11-20 Juli 2024</h5>
+						<h5 class="font-weight-600">15-28 Juli 2024</h5>
 					</div>
 				</div>
 
 				<div class="roadmap-item">
 					<div class="roadmap-content">
 						<p class="text-muted">Perpanjangan Pendaftaran</p>
-						<h5 class="font-weight-600">21-31 Juli 2024</h5>
+						<h5 class="font-weight-600">29 Juli-5 Agustus</h5>
 					</div>
 				</div>
 
 				<div class="roadmap-item">
 					<div class="roadmap-content">
 						<p class="text-muted">Penilaian Karya Peserta</p>
-						<h5 class="font-weight-600">4 Agustus 2024</h5>
+						<h5 class="font-weight-600">6-10 Agustus</h5>
 					</div>
 				</div>
 
 				<div class="roadmap-item">
 					<div class="roadmap-content">
 						<p class="text-muted">Pengumuman Pemenang</p>
-						<h5 class="font-weight-600">6 Agustus 2024</h5>
+						<h5 class="font-weight-600">11 Agustus 2024</h5>
 					</div>
 				</div>
 
@@ -326,7 +326,7 @@
 					</p>
 					<ul class="list-inline">
 						<li class="list-inline-item">
-							<a href="e-learning.html" class="btn btn-rounded-icon">
+							<a href="materi1.html" class="btn btn-rounded-icon">
 								<i class="ti-bookmark-alt"></i>
 								E-Learning
 							</a>
@@ -412,7 +412,7 @@
 							<h6>Product</h6>
 							<!-- links -->
 							<ul>
-								<li><a href="e-learning.html">E-learning</a></li>
+								<li><a href="materi1.html">E-learning</a></li>
 								<li><a href="livecourse.html">Live-Course</a></li>
 								<li><a href="event-fastrack.html">Event FASTRACK.Edu</a></li>
 							</ul>
