--- a/event-national.html
+++ b/event-national.html
@@ -45,7 +45,7 @@
 						<!-- Dropdown list -->
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item @@livecourse" href="livecourse.html">Live-Course</a></li>
-							<li><a class="dropdown-item @@e-learning" href="e-learning.html">E-Learning</a></li>
+							<li><a class="dropdown-item @@e-learning" href="materi1.html">E-Learning</a></li>
 							<li><a class="dropdown-item @@event-fastrack" href="event-fastrack.html">Event
 									FASTRACK.Edu</a></li>
 							<li><a class="dropdown-item @@event-national" href="event-national.html">Event National</a>
@@ -251,7 +251,7 @@
 							<div class="col-lg-3 text-center text-lg-right mt-4 mt-lg-0">
 								<div class="action-button">
 									<!-- Call Button -->
-									<a href="https://www.instagram.com/siftiyan__/" class="btn btn-main-sm">Join now</a>
+									<a href="https://www.instagram.com/fastrack.edu_/" class="btn btn-main-sm">Join now</a>
 								</div>
 							</div>
 						</div>
@@ -392,7 +392,7 @@
 							<h6>Product</h6>
 							<!-- links -->
 							<ul>
-								<li><a href="e-learning.html">E-learning</a></li>
+								<li><a href="materi1.html">E-learning</a></li>
 								<li><a href="livecourse.html">Live-Course</a></li>
 								<li><a href="event-fastrack.html">Event FASTRACK.Edu</a></li>
 							</ul>
