--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<!-- Dropdown list -->
 						<ul class="dropdown-menu">
 							<li><a class="dropdown-item @@livecourse" href="livecourse.html">Live-Course</a></li>
-							<li><a class="dropdown-item @@e-learning" href="e-learning.html">E-Learning</a></li>
+							<li><a class="dropdown-item @@e-learning" href="materi1.html">E-Learning</a></li>
 							<li><a class="dropdown-item @@event-fastrack" href="event-fastrack.html">EventFASTRACK.Edu</a></li>
 							<li><a class="dropdown-item @@event-national" href="event-national.html">Event National</a></li>
 							<li><a class="dropdown-item @@vidio-lesson" href="vidio-lesson.html">Vidio Lesson</a></li>
@@ -110,7 +110,7 @@
 						berkomitmen untuk membawa revolusi dalam cara kita mengajar dan belajar. Tonton profil kami untuk mengetahui lebih
 						lanjut tentang bagaimana FASTRACK.Edu dapat membantu melejitkan penelitian dan membuka potensi penuh setiap
 						mahasiswa.</p>
-					<a href="https://www.youtube.com/watch?v=uf3WxHXZcNg&t=8s" class="btn btn-main-md">Profile</a>
+						<a href="https://docs.google.com/forms/d/e/1FAIpQLSc7bK3oU5DxfKc3W885i4VpoMFwM1SkduEipU6tZZ09mbVHgw/viewform?usp=sf_link" class="btn btn-main-md">Daftar</a>
 				</div>
 				<div class="col-md-6 text-center order-1 order-md-2">
 					<img class="img-fluid" src="images/mobile.png" alt="screenshot">
@@ -165,11 +165,11 @@
 				<div class="col-lg-6 mr-auto align-self-center">
 					<div class="feature-content">
 						<!-- Feature Title -->
-						<h2>Improve your knowledge with <a href="e-learning.html">E-Learnings</a></h2>
+						<h2>Improve your knowledge with <a href="e-learning.html">E-Learning</a></h2>
 						<!-- Feature Description -->
 						<p class="desc">Raih Sukses Tanpa Batas! Daftar Sekarang di Program E-Learning yang Fleksibel
 							dan dilengkapi
-							dengan Modul Praktek dari FASTRACK.Edu!</p>
+							dengan Modul Praktek dari FASTRACK.Edu!</p><br>
 					</div>
 					<!-- Testimonial Quote -->
 					<div class="testimonial">
@@ -184,7 +184,7 @@
 							<li class="list-inline-item">
 								<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="">
 							</li>
-							<li class="list-inline-item">Hasan Abdul Bar , Mawapres Utama Unesa</li>
+							<li class="list-inline-item">Ahmad Trisusetyo, Mawapres Utama Unesa</li>
 						</ul>
 					</div>
 				</div>
@@ -199,11 +199,11 @@
 					<div class="feature-content">
 						<!-- Feature Title -->
 						<h2>Increase your productivity with <a
-								href="https://www.instagram.com/siftiyan__/products/small-apps-free-app-landing-page-template/">Live
-								Courses</a></h2>
+								href="livecourse.html">Live
+								Course</a></h2>
 						<!-- Feature Description -->
 						<p>Jadikan karyamu Lebih Cerah dengan Program Live Course Interaktif dari FASTRACK.Edu!
-							Bergabung Sekarang!</p>
+							Bergabung Sekarang!</p><br>
 					</div>
 					<!-- Testimonial Quote -->
 					<div class="testimonial">
@@ -220,7 +220,7 @@
 							<li class="list-inline-item">
 								<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="">
 							</li>
-							<li class="list-inline-item">Andhini , Mawapres 2 Unesa</li>
+							<li class="list-inline-item">Azizah Salsabilla, Mawapres 2 Unesa</li>
 						</ul>
 					</div>
 				</div>
@@ -246,11 +246,11 @@
 				<div class="col-lg-6 mr-auto align-self-center">
 					<div class="feature-content">
 						<!-- Feature Title -->
-						<h2>Unlock Your Writing Potential with <a
-								href="https://www.instagram.com/siftiyan__/products/small-apps-free-app-landing-page-template/">Engaging
-								Video Lessons</a></h2>
+						<h2>Unlock Your Writing Potential with Engaging<a
+								href="upload.html">
+								Video Lesson</a></h2>
 						<!-- Feature Description -->
-						<p>Kuiatkan pondasi Kepenulisanmu dengan fitur konten dari FASTRACK.Edu! Bergabung Sekarang!</p>
+						<p>Kuiatkan pondasi Kepenulisanmu dengan fitur konten dari FASTRACK.Edu! Bergabung Sekarang!</p><br>
 					</div>
 					<!-- Testimonial Quote -->
 					<div class="testimonial">
@@ -265,7 +265,7 @@
 							<li class="list-inline-item">
 								<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="">
 							</li>
-							<li class="list-inline-item">Cahyo , Gold medal KMI Expo</li>
+							<li class="list-inline-item">Dwi Ariyan Elsa, Gold medal KMI Expo</li>
 						</ul>
 					</div>
 				</div>
@@ -280,11 +280,11 @@
 					<div class="feature-content">
 						<!-- Feature Title -->
 						<h2>Booster Your Competition With <a
-								href="https://www.instagram.com/siftiyan__/products/small-apps-free-app-landing-page-template/">Private
+								href="mentoring.html">Private
 								Mentoring</a></h2>
 						<!-- Feature Description -->
 						<p>Jadikan timmu jadi juara dengan Program Mentoring Private dari FASTRACK.Edu! Bergabung
-							Sekarang!</p>
+							Sekarang!</p><br>
 					</div>
 					<!-- Testimonial Quote -->
 					<div class="testimonial">
@@ -301,7 +301,7 @@
 							<li class="list-inline-item">
 								<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="">
 							</li>
-							<li class="list-inline-item">Shihab , 50+ Awwarde Essay National</li>
+							<li class="list-inline-item">Kartika Putri Wulandari, 50+ Awwarde Essay National</li>
 						</ul>
 					</div>
 				</div>
@@ -324,10 +324,10 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="section-title">
-						<h2><a href="">Event Essay National</a></h2>
-						<p><a href="">FIC (FASTRACK.Edu Innovation Challenge)</a> : Halo siswa dan mahasiswa calon
+						<h2><a href="event-fastrack.html">Event Essay National</a></h2>
+						<p> Halo siswa dan mahasiswa calon
 							penerus bangsa!
-							Siapkan diri kalian dalam serangkaian kegiatan kami dengan tema "Aktualisasi Peran Generasi
+							Siapkan diri kalian dalam serangkaian kegiatan <a href="event-fastrack.html">FASTRACK.Edu Innovation Challenge </a> dengan tema "Aktualisasi Peran Generasi
 							Milenial Guna Mewujudkan Indonesia Emas 2045" </p>
 					</div>
 				</div>
@@ -421,42 +421,42 @@
 				<div class="roadmap-item">
 					<div class="roadmap-content">
 						<p class="text-muted">Pendaftaran Gelombang 1</p>
-						<h5 class="font-weight-600">22-30 Juni 2024</h5>
+						<h5 class="font-weight-600">1-7 Juli 2024</h5>
 					</div>
 				</div>
 
 				<div class="roadmap-item">
 					<div class="roadmap-content">
 						<p class="text-muted">Pendaftaran Gelombang 2</p>
-						<h5 class="font-weight-600">1-10 Juli 2024</h5>
+						<h5 class="font-weight-600">8-14 Juli 2024</h5>
 					</div>
 				</div>
 
 				<div class="roadmap-item">
 					<div class="roadmap-content">
 						<p class="text-muted">Pendaftaran Gelombang 3</p>
-						<h5 class="font-weight-600">11-20 Juli 2024</h5>
+						<h5 class="font-weight-600">15-28 Juli 2024</h5>
 					</div>
 				</div>
 
 				<div class="roadmap-item">
 					<div class="roadmap-content">
 						<p class="text-muted">Perpanjangan Pendaftaran</p>
-						<h5 class="font-weight-600">21-31 Juli 2024</h5>
+						<h5 class="font-weight-600">29 Juli-5 Agustus</h5>
 					</div>
 				</div>
 
 				<div class="roadmap-item">
 					<div class="roadmap-content">
 						<p class="text-muted">Penilaian Karya Peserta</p>
-						<h5 class="font-weight-600">4 Agustus 2024</h5>
+						<h5 class="font-weight-600">6-10 Agustus</h5>
 					</div>
 				</div>
 
 				<div class="roadmap-item">
 					<div class="roadmap-content">
 						<p class="text-muted">Pengumuman Pemenang</p>
-						<h5 class="font-weight-600">6 Agustus 2024</h5>
+						<h5 class="font-weight-600">11 Agustus 2024</h5>
 					</div>
 				</div>
 
@@ -512,32 +512,10 @@
 					<div class="box">
 						<h3 style="color: #07d5c0;">Vidio Lesson</h3>
 
-						<div class="price"><sup>Rp.</sup>10.000<span> / Vidio</span></div>
+						<div class="price"><sup>Rp.</sup>25.000<span> / Vidio</span></div>
 						<img src="images/price/pricing-free.png" class="img-fluid" alt="">
 						<ul>
-							<li>Keterjangkauan dan Keterbukaan Akses</li>
-							<li>Visualisasi Materi yang Menarik</li>
-							<li>Fleksibilitas dalam Pembelajaran</li>
-							<li>Kualitas Produksi yang Tinggi</li>
-							<li>Interaksi dan Keterlibatan</li>
-							<li>Portabilitas dan Kompatibilitas</li>
-							<li>Pendekatan Multisensori</li>
-							<li>Kemudahan Akses Berbagai Perangkat</li>
-							<li>Pendekatan Belajar Menyenangkan</li>
-							<li>Fasilitasi Pembelajaran Mandiri yang Efektif</li>
-						</ul>
-						<a href="#" class="btn-buy">Buy Now</a>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
-					<div class="box">
-
-						<h3 style="color: #65c600;">E-Learning</h3>
-						<div class="price"><sup>Rp.</sup>15.000<span> / lifetime</span></div>
-						<img src="images/price/pricing-starter.png" class="img-fluid" alt="">
-						<ul>
-							<li>Akses E-learning lifetime</li>
+							<li>Akses Vidio Lesson lifetime</li>
 							<li>E-sertifikat</li>
 							<li>Teknik brainstorming</li>
 							<li>Materi dasar esai</li>
@@ -552,9 +530,31 @@
 					</div>
 				</div>
 
+				<div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+					<div class="box">
+
+						<h3 style="color: #65c600;">Event Competition</h3>
+						<div class="price"><sup>Rp.</sup>40.000<span> / lifetime</span></div>
+						<img src="images/price/pricing-starter.png" class="img-fluid" alt="">
+						<ul>
+							<li>Keterjangkauan dan Keterbukaan Akses</li>
+							<li>Visualisasi Lomba yang Menarik</li>
+							<li>Fleksibilitas dalam CP</li>
+							<li>Kualitas Lomba yang Tinggi</li>
+							<li>Interaksi dan Keterlibatan</li>
+							<li>Portabilitas dan Kompatibilitas</li>
+							<li>Eksistensi Pengakuan Kampus  </li>
+							<li>Hadiah kejuaran lomba</li>
+							<li>Pendekatan lomba Menyenangkan</li>
+							<li>Fasilitasi Lomba yang Efektif</li>
+						</ul>
+						<a href="#" class="btn-buy">Buy Now</a>
+					</div>
+				</div>
+
 				<div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
 					<div class="box">
-						<h3 style="color: #ff901c;">Live-Course</h3>
+						<h3 style="color: #ff901c;">E-Course</h3>
 						<div class="price"><sup>Rp.</sup>80.000<span> / Session</span></div>
 						<img src="images/price/pricing-business.png" class="img-fluid" alt="">
 						<ul>
@@ -575,12 +575,12 @@
 
 				<div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
 					<div class="box">
-						<h3 style="color: #ff0071;">Bundle Pro</h3>
+						<h3 style="color: #ff0071;">Private Mentor</h3>
 						<span class="featured">discount 20%</span>
-						<div class="price"><sup>Rp.</sup>72.000<span> / Session</span></div>
+						<div class="price"><sup>Rp.</sup>92.000<span> / Session</span></div>
 						<img src="images/price/pricing-ultimate.png" class="img-fluid" alt="">
 						<ul>
-							<li>8 live meeting materi esai</li>
+							<li>12 live meeting materi esai</li>
 							<li>1 bulan bimbingan intensif</li>
 							<li>7 modul ppt</li>
 							<li>8 vidio live</li>
@@ -620,10 +620,11 @@
 									adalah platform yang sangat saya rekomendasikan bagi mahasiswa yang ingin
 									berprestasi dalam penelitian."
 								</p>
+								<br>
 								<!-- Person Thumb -->
-								<div class="image">
+								<!-- <div class="image">
 									<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="testi">
-								</div>
+								</div> -->
 								<!-- Name and Company -->
 								<cite>Andi Pratama, Mahasiswa Universitas Indonesia</cite>
 							</div>
@@ -639,10 +640,11 @@
 									terkini. Hasilnya, penelitian saya memenangkan juara pertama di lomba penelitian
 									nasional tahun ini."
 								</p>
+								<br>
 								<!-- Person Thumb -->
-								<div class="image">
+								<!-- <div class="image">
 									<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="testi">
-								</div>
+								</div> -->
 								<!-- Name and Company -->
 								<cite>Dewi Larasati, Mahasiswa Institut Teknologi Bandung</cite>
 							</div>
@@ -658,10 +660,11 @@
 									berkualitas dari para ahli, yang berperan besar dalam memenangkan medali emas di
 									kompetisi tersebut. Terima kasih, FASTRACK.Edu!"
 								</p>
+								<br>
 								<!-- Person Thumb -->
-								<div class="image">
+								<!-- <div class="image">
 									<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="testi">
-								</div>
+								</div> -->
 								<!-- Name and Company -->
 								<cite>Budi Santoso, Mahasiswa Universitas Gadjah Mada</cite>
 							</div>
@@ -677,10 +680,11 @@
 									dua dalam kompetisi penelitian regional. Dukungan dari FASTRACK.Edu benar-benar
 									mendorong saya untuk terus berprestasi."
 								</p>
+								<br>
 								<!-- Person Thumb -->
-								<div class="image">
+								<!-- <div class="image">
 									<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="testi">
-								</div>
+								</div> -->
 								<!-- Name and Company -->
 								<cite>Siti Aisyah, Mahasiswa Universitas Airlangga</cite>
 							</div>
@@ -702,7 +706,7 @@
 					</p>
 					<ul class="list-inline">
 						<li class="list-inline-item">
-							<a href="e-learning.html" class="btn btn-rounded-icon">
+							<a href="materi1.html" class="btn btn-rounded-icon">
 								<i class="ti-bookmark-alt"></i>
 								E-Learning
 							</a>
@@ -788,7 +792,7 @@
 							<h6>Product</h6>
 							<!-- links -->
 							<ul>
-								<li><a href="e-learning.html">E-learning</a></li>
+								<li><a href="materi1.html">E-learning</a></li>
 								<li><a href="livecourse.html">Live-Course</a></li>
 								<li><a href="event-fastrack.html">Event FASTRACK.Edu</a></li>
 							</ul>
