--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 					<div class="box">
 
 						<h3 style="color: #65c600;">Event Competition</h3>
-						<div class="price"><sup>Rp.</sup>40.000<span> / lifetime</span></div>
+						<div class="price"><sup>Rp.</sup>40.000<span> /Tim</span></div>
 						<img src="images/price/pricing-starter.png" class="img-fluid" alt="">
 						<ul>
 							<li>Keterjangkauan dan Keterbukaan Akses</li>
@@ -554,8 +554,8 @@
 
 				<div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
 					<div class="box">
-						<h3 style="color: #ff901c;">E-Course</h3>
-						<div class="price"><sup>Rp.</sup>80.000<span> / Session</span></div>
+						<h3 style="color: #ff901c;">Regular Member</h3>
+						<div class="price"><sup>Rp.</sup>60.000<span> /Event</span></div>
 						<img src="images/price/pricing-business.png" class="img-fluid" alt="">
 						<ul>
 							<li>8 live meeting materi esai</li>
@@ -565,9 +565,9 @@
 							<li>E-sertifikat</li>
 							<li>Pendampingan dan review karya</li>
 							<li>Akses contoh karya juara nasional</li>
-							<li>Tamplate latihan karya</li>
-							<li class="na">Akses E-learning lifetime</li>
-							<li class="na">Gratis Registrasi di FIC</li>
+							<li>Akses E-learning</li>
+							<li class="na">Mentoring Private</li>
+							<li class="na">Fastrack Registrasi di FIC</li>
 						</ul>
 						<a href="#" class="btn-buy">Buy Now</a>
 					</div>
@@ -575,9 +575,9 @@
 
 				<div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
 					<div class="box">
-						<h3 style="color: #ff0071;">Private Mentor</h3>
+						<h3 style="color: #ff0071;">Exclusive Member</h3>
 						<span class="featured">discount 20%</span>
-						<div class="price"><sup>Rp.</sup>92.000<span> / Session</span></div>
+						<div class="price"><sup>Rp.</sup>200.000<span> /Event</span></div>
 						<img src="images/price/pricing-ultimate.png" class="img-fluid" alt="">
 						<ul>
 							<li>12 live meeting materi esai</li>
@@ -587,9 +587,9 @@
 							<li>E-sertifikat</li>
 							<li>Pendampingan dan review karya</li>
 							<li>Akses contoh karya juara nasional</li>
-							<li>Tamplate latihan karya</li>
-							<li>Akses E-learning lifetime</li>
-							<li>Gratis Registrasi di FIC</li>
+							<li>Akses E-learning</li>
+							<li>Mentoring Private</li>
+							<li>Fastrack Registrasi di FIC</li>
 						</ul>
 						<a href="#" class="btn-buy">Buy Now</a>
 					</div>
