--- a/mentoring.html
+++ b/mentoring.html
@@ -44,7 +44,7 @@
             </a>
             <!-- Dropdown list -->
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item @@livecourse" href="livecourse.html">LivE-Learning</a></li>
+              <li><a class="dropdown-item @@livecourse" href="livecourse.html">Live-Learning</a></li>
               <li><a class="dropdown-item @@e-learning" href="materi1.html">E-Learning</a></li>
               <li><a class="dropdown-item @@event-fastrack" href="event-fastrack.html">Event FASTRACK.Edu</a></li>
               <li><a class="dropdown-item @@event-national" href="event-national.html">Event National</a></li>
