--- a/index.html
+++ b/index.html
@@ -533,20 +533,20 @@
 				<div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
 					<div class="box">
 
-						<h3 style="color: #65c600;">Event Competition</h3>
-						<div class="price"><sup>Rp.</sup>40.000<span> /Tim</span></div>
+						<h3 style="color: #65c600;">Regular Member</h3>
+						<div class="price"><sup>Rp.</sup>60.000<span> /Year</span></div>
 						<img src="images/price/pricing-starter.png" class="img-fluid" alt="">
 						<ul>
-							<li>Keterjangkauan dan Keterbukaan Akses</li>
-							<li>Visualisasi Lomba yang Menarik</li>
-							<li>Fleksibilitas dalam CP</li>
-							<li>Kualitas Lomba yang Tinggi</li>
-							<li>Interaksi dan Keterlibatan</li>
-							<li>Portabilitas dan Kompatibilitas</li>
-							<li>Eksistensi Pengakuan Kampus  </li>
-							<li>Hadiah kejuaran lomba</li>
-							<li>Pendekatan lomba Menyenangkan</li>
-							<li>Fasilitasi Lomba yang Efektif</li>
+							<li>8 live meeting materi esai</li>
+							<li>1 bulan bimbingan intensif</li>
+							<li>7 modul Materi Kepenulisan</li>
+							<li>Recording Zoom Meeting</li>
+							<li>E-sertifikat</li>
+							<li>Pendampingan dan review karya</li>
+							<li>Akses contoh karya juara nasional</li>
+							<li>Akses E-learning</li>
+							<li class="na">Akses ke E-Book</li>
+							<li class="na">Diajarkan simulasi cara presentasi esai</li>
 						</ul>
 						<a href="#" class="btn-buy">Buy Now</a>
 					</div>
@@ -554,20 +554,20 @@
 
 				<div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
 					<div class="box">
-						<h3 style="color: #ff901c;">Regular Member</h3>
-						<div class="price"><sup>Rp.</sup>60.000<span> /Event</span></div>
+						<h3 style="color: #ff901c;">Exclusive Member</h3>
+						<div class="price"><sup>Rp.</sup>100.000<span> /Year</span></div>
 						<img src="images/price/pricing-business.png" class="img-fluid" alt="">
 						<ul>
-							<li>8 live meeting materi esai</li>
+							<li>9 live meeting materi esai</li>
 							<li>1 bulan bimbingan intensif</li>
-							<li>7 modul ppt</li>
-							<li>8 vidio live</li>
+							<li>7 modul Materi Kepenulisan</li>
+							<li>Recording Zoom Meeting</li>
 							<li>E-sertifikat</li>
 							<li>Pendampingan dan review karya</li>
 							<li>Akses contoh karya juara nasional</li>
 							<li>Akses E-learning</li>
-							<li class="na">Mentoring Private</li>
-							<li class="na">Fastrack Registrasi di FIC</li>
+							<li>Akses ke E-Book</li>
+							<li>Diajarkan simulasi cara presentasi esai</li>
 						</ul>
 						<a href="#" class="btn-buy">Buy Now</a>
 					</div>
@@ -575,21 +575,21 @@
 
 				<div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
 					<div class="box">
-						<h3 style="color: #ff0071;">Exclusive Member</h3>
+						<h3 style="color: #ff0071;">Mentoring Private</h3>
 						<span class="featured">discount 20%</span>
-						<div class="price"><sup>Rp.</sup>200.000<span> /Event</span></div>
+						<div class="price"><sup>Rp.</sup>120.000<span> /Tim</span></div>
 						<img src="images/price/pricing-ultimate.png" class="img-fluid" alt="">
 						<ul>
-							<li>12 live meeting materi esai</li>
-							<li>1 bulan bimbingan intensif</li>
-							<li>7 modul ppt</li>
-							<li>8 vidio live</li>
+							<li>3x Pertemuan 60 Menit by Zoom Meeting</li>
+							<li>Topik Materi & Kurikulum by Fastrack.Edu</li>
+							<li>Private Class one on one by Zoom dan WA</li>
+							<li>7 Modul Materi Kepenulisan</li>
 							<li>E-sertifikat</li>
-							<li>Pendampingan dan review karya</li>
-							<li>Akses contoh karya juara nasional</li>
+							<li>3 Video Simulasi Presentasi Esai</li>
+							<li>Recording Zoom Meeting</li>
 							<li>Akses E-learning</li>
-							<li>Mentoring Private</li>
-							<li>Fastrack Registrasi di FIC</li>
+							<li>Template Latihan Menulis Esai</li>
+							<li>Akses Contoh Karya Juara Nasional</li>
 						</ul>
 						<a href="#" class="btn-buy">Buy Now</a>
 					</div>
